--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "create-express-node-starter",
-  "version": "0.0.0",
+  "version": "0.7.0",
   "author": "@Raed Fadhlaoui <raed.fadhlaoui@hotmail.com>",
   "description": "CLI tool for bootstrapping Express.js projects with predefined templates",
   "license": "MIT",
   "main": "index.js",
   "bin": {
-    "create-express-node-starter": "./boilerplate/cli/index.js"
+    "npx create-express-node-starter": "./boilerplate/cli/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:major": "standard-version --release-as major",
+    "release:dry": "standard-version --dry-run"
   },
   "repository": {
     "type": "git",
@@ -19,9 +22,12 @@
     "node",
     "express",
     "starter",
-    "template"
+    "template",
+    "restful-api"
   ],
   "dependencies": {
-    "inquirer": "^8.0.0"
+    "fs-extra": "^11.2.0",
+    "inquirer": "^8.0.0",
+    "standard-version": "^9.3.2"
   }
 }
