--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "author": "@Raed Fadhlaoui <raed.fadhlaoui@hotmail.com>",
   "description": "CLI tool for bootstrapping Express.js projects with predefined templates",
   "license": "MIT",
-  "main": "boilerplate/cli/index.js",
+  "main": "lib/cli.js",
   "bin": {
-    "create-express-node-starter": "./boilerplate/cli/index.js"
+    "create-express-node-starter": "./lib/cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node boilerplate/cli/index.js",
+    "start": "node lib/cli.js",
     "release": "standard-version",
     "release:minor": "standard-version --release-as minor",
     "release:major": "standard-version --release-as major",
