--- a/lib/project-files/basic-project/package.json
+++ b/lib/project-files/basic-project/package.json
@@ -54,7 +54,7 @@
     "nodemon": "^3.1.0",
     "npm": "^10.5.0",
     "prettier": "^2.6.2",
-    "standard-version": "^9.3.2",
+    "standard-version": "^9.3.2"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
