--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node lib/cli.js",
+    "lint:check": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "format:check": "prettier --check .",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx --fix .",
+    "format:fix": "prettier --write .",
     "release": "standard-version",
     "release:minor": "standard-version --release-as minor",
     "release:major": "standard-version --release-as major",
-    "release:dry": "standard-version --dry-run"
+    "release:dry": "standard-version --dry-run",
+    "prepush": "npm run format:fix && npm run lint:check && npm run format:check",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -30,6 +36,23 @@
   "dependencies": {
     "fs-extra": "^11.2.0",
     "inquirer": "^8.0.0",
-    "standard-version": "^9.3.2"
+    "babel-eslint": "^10.1.0",
+    "standard-version": "^9.3.2",
+    "prettier": "^2.6.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "engines": {
+    "node": ">=14.16.0 <=20.11.0",
+    "npm": ">=6.14.11 <=10.2.4"
   }
 }
