--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "restful-api"
   ],
   "dependencies": {
+    "babel-eslint": "^10.1.0",
+    "express-validator": "^7.0.1",
     "fs-extra": "^11.2.0",
     "inquirer": "^8.0.0",
-    "babel-eslint": "^10.1.0",
-    "standard-version": "^9.3.2",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "standard-version": "^9.3.2"
   },
   "devDependencies": {
     "eslint": "^7.5.0",
